--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
     if ('serviceWorker' in navigator) {
-      window.addEventListener('flutter-first-frame', function () {
+      window.addEventListener('load', function () {
         navigator.serviceWorker.register('flutter_service_worker.js?v=4081675799');
       });
     }
   </script>
-  <script src="main.dart.js" type="application/javascript"></script>
+  <script src="main.dart.js?v=4081675799" type="application/javascript"></script>
 </body>
 </html>
